--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: wanchen3210@gmail.com
 
 # Build settings
 markdown: kramdown
-theme: minima
+#theme: minima
 gems:
 
 # Exclude from processing.
